<resources>
    <string name="app_name">Mastodroid</string>
    <string name="username">Username or email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="preferences">PREFERENCES</string>
    <string name="authKey">AUTH_KEY</string>
    <string name="statusId">STATUSID</string>
    <string name="toot_hint">What is on your mind?</string>
    <string name="content_warning_hint">Content warning</string>
    <string name="toot">Toot</string>
    <string name="mark_as_private">Mark as private</string>
    <string name="do_not_display_in_public_timeline">Do not display in public timeline</string>
    <string name="content_warning">Hide behind content warning</string>
    <string name="show_content_warning">Show content</string>
    <string name="hide_content_warning">Hide content</string>
    <string name="CURRENT_USERNAME">CURRENT_USERNAME</string>
    <string name="login_failed_message">Couldn\'t log in</string>
    <string name="NO_USERNAME_ERROR">You must enter a username</string>
    <string name="NO_PASSWORD_ERROR">You must enter a password.</string>
    <string name="tooting_failed_message">Failed to post toot. Better luck next time?</string>
    <string name="select_your_instance">Select your instance</string>
    <string name="custom_schema">eu.theinvaded.mastodroid</string>
    <string name="host">oauth2redirect</string>
    <string name="authorization_code">authorization_code</string>
    <string name="code">code</string>
    <string name="api_oauth">oauth</string>
    <string name="api_authorize">authorize</string>
    <string name="scopes">read write follow</string>
    <string name="server_connection_error">Cannot connect to the server.</string>
    <string name="response_type">code</string>
    <string name="sign_in_mastodon">Sign in mastodon.social</string>
    <string name="or">OR</string>
    <string name="client_secret">client_secret</string>
    <string name="client_id">client_id</string>
    <string name="title_activity_user">User Activity</string>
</resources>
