<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="eu.theinvaded.mastondroid.viewmodel.ReplyViewModel"/>
        <variable
            name="VIEW"
            type="android.view.View"/>
    </data>
<RelativeLayout
    android:id="@+id/activity_reply"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.theinvaded.mastondroid.ui.activity.ReplyActivity">

    <EditText
        android:id="@+id/status_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/toot_hint"
        android:text="@={viewModel.tootText}"
        android:inputType="textMultiLine|textCapSentences"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toot"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/btnshape_toot"
        android:layout_below="@+id/status_et"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled='@{viewModel.remainingChars &gt; -1 }'
        android:onClick="@{() -> viewModel.postStatus()}"/>
    <TextView
        android:id="@+id/count_tv"
        android:layout_below="@id/status_et"
        android:layout_toLeftOf="@id/send_button"
        android:layout_toStartOf="@id/send_button"
        android:layout_marginRight="14dp"
        android:textColor='@{viewModel.remainingChars &gt; -1 ? @color/colorPrimary : @color/colorRed }'
        android:text="@{viewModel.remainingCharsText}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/private_ck"
        android:text="@string/mark_as_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="@={viewModel.isPrivate}"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_alignBaseline="@+id/send_button"
        android:layout_alignBottom="@+id/send_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/content_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="@={viewModel.showContentWarning}"
        android:layout_below="@+id/public_timeline_ck"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/spoiler_ck"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox" />

    <CheckBox
        android:id="@+id/public_timeline_ck"
        android:checked="@={viewModel.notDisplayPublic}"
        android:visibility="@{viewModel.isPrivate ? VIEW.GONE : VIEW.VISIBLE}"
        android:text="@string/do_not_display_in_public_timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_below="@+id/private_ck"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.showContentWarning ? VIEW.VISIBLE : VIEW.GONE}"
        android:text="@={viewModel.spoilerText}"
        android:ems="10"
        android:id="@+id/content_warning_et"
        android:layout_below="@+id/spoiler_ck"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/content_warning_hint" />
</RelativeLayout>
</layout>